src/components/Carousel/Carousel.module.css
.carousel {
  position: relative;
  width: 100%;
  height: 100%;
  user-select: none;
  display: flex;
  background-color: #fff;
  flex-flow: column;
  align-items: stretch;
  box-sizing: border-box;
}

.maxCarousel {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2000;
  width: 100%;
  height: 100%;
  background-color: #fff;
  transform: scale(1);
  transform-origin: top center;
  display: flex;
  flex-flow: column;
  align-items: stretch;
}

.carouselInner {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  flex: 0 1 auto;
}

.slidesContainer {
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  touch-action: auto;
  flex: 0 1 auto;
}

.gallery {
  background-color: #000;
}

[data-is-not-keyboard-user='true'] *:focus {
  outline: none;
}

